tests/models/enum/named/f32/fail/max_items.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(max_items = 2)]
        value: f32
    },
}
fn main() {}
